--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body {
 
 .buttons {
   display: flex;
-  justify-content: center;
+  justify-content: center !important;
   margin: 30px 0;
 }
 button {
