--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body {
   padding-left: 5rem;
   color: white;
   font-size: 32px;
+  padding: 0 25px;
   background-color: #171717;
   border: 2px solid #9dffad;
   border-radius: 15px;
@@ -134,6 +135,7 @@ button {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  margin-bottom: 20px;
 }
 .card {
   width: 100%;
